# zhiji

./: .gitignore  CLAUDE.md  LICENSE  README.en.md  README.md  THIRD_PARTY_NOTICES.md  package-lock.json  package.json  start-app.bat
docs/: linuxdo-open-source-promotion.md
frontend/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: checks.rs  gaming_optimizer.rs  lib.rs  main.rs  monitor_identity.rs
tests/: overview-dom.test.mjs
